# chimney-post

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: session-persistence.md  testing.md
src/: config.rs  error.rs  lib.rs  main.rs
src/matrix/: client.rs  crypto.rs  formatter.rs  mod.rs  routing.rs
src/queue/: memory.rs  mod.rs  store.rs  worker.rs
src/smtp/: mod.rs  parser.rs  server.rs
systemd/: chimney-post.service
tests/: integration_test.rs
