[package]
name = "chimney-post"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-only SMTP server forwarding email to Matrix with E2EE"
rust-version = "1.88"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.18"
matrix-sdk = { version = "0.16.0", features = ["e2e-encryption", "sqlite"] }
url = "2.5.7"
minijinja = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
sd-notify = "0.4"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
